# CodexTimeMachine

./: .gitignore  LICENSE  README.md  pyproject.toml
backend/: __init__.py
backend/assessment/: __init__.py  codex_provider.py  loader.py  models.py  prompt.py  provider.py  renderer.py  runner.py  validator.py
backend/counterfactual/: __init__.py  coverage.py  loader.py  models.py  renderer.py  runner.py  validator.py
backend/divergence/: __init__.py  alignment.py  classifier.py  loader.py  models.py  normalizer.py  receipt.py  renderer.py  runner.py  validator.py
backend/evaluation/: __init__.py  context_builder.py  integrity.py  loader.py  models.py  render.py
backend/intervention/: __init__.py  loader.py  models.py  policy.py  provider.py  renderer.py  runner.py  validator.py
backend/replay/: __init__.py  codex_provider.py  fake_provider.py  loader.py  models.py  prompt.py  provider.py  render.py  runner.py
backend/runs/: __init__.py  codex_cli.py  events.py  isolation.py  models.py  runner.py  workspace.py
backend/temporal/: __init__.py  audit.py  availability.py  integrity.py  (+2 more)
frontend/: README.md  eslint.config.js  package-lock.json  package.json  tsconfig.json  vite.config.ts
tests/: conftest.py  test_blind_spot_assessment.py  test_boundary_audit.py  test_codex_cli.py  test_counterfactual_coverage.py  test_counterfactual_replay.py  test_evaluation_context.py  test_ghost_intervention.py  test_history_divergence.py  test_isolation_probe.py  test_run_workspace.py  test_snapshot_builder.py  test_temporal_runner.py  test_trajectory_extractor.py
(+41 files in other folders)
