[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-time-machine"
version = "0.1.0"
description = "Deterministic temporal information boundary primitives"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.8,<3",
    "PyYAML>=6.0,<7",
]

[project.optional-dependencies]
dev = ["pytest>=8.2,<9"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
norecursedirs = ["tests/fixtures"]

[tool.setuptools.packages.find]
include = ["backend*"]
